--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -205,6 +205,7 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
+  "80:class_g =  'throne'",
    "100:name     = 'Dunst'",             # lemonbar
   "10:class_g    = 'eww-blur_full'",            # maim
   #"100:class_g    = 'XTerm'",
@@ -222,7 +223,6 @@ opacity-rule = [
   "85:class_g    = 'kitty'"
   #"80:class_g    = 'Spotify'"
 ];
-
 
 #################################
 #     Background-Blurring       #
